--- a/bower.json
+++ b/bower.json
@@ -1,12 +1,13 @@
 {
     "name": "ajaxchimp",
-    "version": "1.0.2",
+    "version": "1.1",
     "main": "./jquery.ajaxchimp.js",
     "dependencies": {
         "jquery": ">=1.9.0"
     },
     "ignore": [
         "**/.*",
-        "./ajaxchimp.jquery.json"
+        "./ajaxchimp.jquery.json",
+        "./MINIFY.md"
     ]
 }
