--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,6 @@
 {
     "name": "scdoshi/jquery-ajaxchimp",
-    "title": "AjaxChimp
+    "title": "AjaxChimp",
     "description": "Use AJAX for your Mailchimp forms.",
     "type": "component",
     "license": "MIT"
