--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,14 @@
 {
     "name": "scdoshi/jquery-ajaxchimp",
-    "title": "AjaxChimp",
     "description": "Use AJAX for your Mailchimp forms.",
     "type": "component",
-    "license": "MIT"
+    "license": "MIT",
+    "extra": {
+        "component": {
+            "scripts": [
+                "jquery.ajaxchimp.js",
+                "jquery.ajaxchimp.langs.js"
+            ]
+        }
+    }
 }
